fix: nav scrollbar

--- a/components/Browse/BrowseThumb.module.scss
+++ b/components/Browse/BrowseThumb.module.scss
@@ -1,9 +1,7 @@
 @import "/styles/variables";
 
 .container {
-	flex: 1 1 20%;
-	min-width: 250px;
-	margin: 0 1vw 4vh 1vw;
+	width: 100%;
 	display: block;
 	position: relative;
 	border-radius: 16px;
