--- a/components/Layouts/MainLayout/MainLayout.module.scss
+++ b/components/Layouts/MainLayout/MainLayout.module.scss
@@ -5,11 +5,13 @@
 	width: 100vw;
 	overflow: hidden;
 	display: flex;
+	align-items: flex-start;
 }
 
 .nav {
+	min-height: 0;
 	height: 100%;
-	flex: 0 0 "auto";
+	flex: 0 0 auto;
 	width: 16rem;
 	background: $lightest;
 	transition: width 0.2s ease-out, opacity 0.1s ease-out;
