--- a/components/Layouts/MainLayout/Nav.module.scss
+++ b/components/Layouts/MainLayout/Nav.module.scss
@@ -1,11 +1,13 @@
 @import "/styles/variables";
 
 .nav {
+	min-height: 0;
 	height: 100%;
 	width: 16rem;
-	padding: 2rem 0;
+	padding-top: 2rem;
 	display: flex;
 	flex-direction: column;
+	justify-content: flex-start;
 	align-items: flex-start;
 	border-right: 2px solid $lighter;
 	overflow: hidden;
@@ -20,12 +22,27 @@
 }
 
 .menu {
-	margin-top: 6vh;
+	margin-top: 3vh;
+	min-height: 0;
+	flex: 1;
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	position: relative;
+	&::-webkit-scrollbar {
+		width: 6px;
+	}
+}
+
+.inner {
+	margin-top: 3vh;
+	position: relative;
 	padding: 0 1.5rem;
+	margin-bottom: 3vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	position: relative;
 }
 
 .slider {
